name:           werewolf
version:        1.1.1.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/hjwylde/werewolf

synopsis:       A game engine for playing werewolf within an arbitrary chat client
description:    A game engine for playing werewolf within an arbitrary chat client.
                Werewolf is a well known social party game, commonly also called Mafia.
                See the <https://en.wikipedia.org/wiki/Mafia_(party_game) Wikipedia article> for a
                rundown on its gameplay and history.

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Game
build-type:     Simple

extra-source-files: CHANGELOG.md README.md

source-repository head
    type:       git
    location:   git@github.com:hjwylde/werewolf

executable werewolf
    main-is:        Main.hs
    hs-source-dirs: app/
    ghc-options:    -threaded -with-rtsopts=-N
    other-modules:
        Game.Werewolf.Command
        Game.Werewolf.Command.Global
        Game.Werewolf.Command.Hunter
        Game.Werewolf.Command.Oracle
        Game.Werewolf.Command.Orphan
        Game.Werewolf.Command.Protector
        Game.Werewolf.Command.Scapegoat
        Game.Werewolf.Command.Seer
        Game.Werewolf.Command.Status
        Game.Werewolf.Command.Villager
        Game.Werewolf.Command.Werewolf
        Game.Werewolf.Command.Witch
        Game.Werewolf.Engine
        Game.Werewolf.Messages
        Game.Werewolf.Util
        Paths_werewolf
        Werewolf.Command.Boot
        Werewolf.Command.Choose
        Werewolf.Command.Circle
        Werewolf.Command.Divine
        Werewolf.Command.End
        Werewolf.Command.Heal
        Werewolf.Command.Help
        Werewolf.Command.Interpret
        Werewolf.Command.Pass
        Werewolf.Command.Ping
        Werewolf.Command.Poison
        Werewolf.Command.Protect
        Werewolf.Command.Quit
        Werewolf.Command.See
        Werewolf.Command.Start
        Werewolf.Command.Status
        Werewolf.Command.Unvote
        Werewolf.Command.Version
        Werewolf.Command.Vote
        Werewolf.Messages
        Werewolf.Options
        Werewolf.System
        Werewolf.Version

    default-language: Haskell2010
    other-extensions:
        FlexibleContexts,
        MultiParamTypeClasses,
        OverloadedStrings,
        Rank2Types
    build-depends:
        aeson >= 0.8 && < 0.12,
        base >= 4.8 && < 5,
        containers == 0.5.*,
        directory == 1.2.*,
        extra == 1.4.*,
        filepath == 1.4.*,
        lens >= 4.12 && < 4.15,
        MonadRandom == 0.4.*,
        mtl == 2.2.*,
        optparse-applicative >= 0.11 && < 0.13,
        random-shuffle,
        text == 1.2.*,
        transformers == 0.4.*,
        werewolf

library
    hs-source-dirs: src/
    exposed-modules:
        Control.Lens.Extra
        Data.String.Humanise
        Game.Werewolf
        Game.Werewolf.Game
        Game.Werewolf.Player
        Game.Werewolf.Response
        Game.Werewolf.Role

    default-language: Haskell2010
    other-extensions:
        CPP,
        DeriveGeneric,
        FlexibleContexts,
        OverloadedStrings,
        Rank2Types,
        TemplateHaskell
    build-depends:
        aeson >= 0.8 && < 0.12,
        base >= 4.8 && < 5,
        containers == 0.5.*,
        extra == 1.4.*,
        lens >= 4.12 && < 4.15,
        mtl == 2.2.*,
        text == 1.2.*,
        transformers == 0.4.*
