name:           werewolf
version:        1.5.1.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/hjwylde/werewolf

synopsis:       A game engine for playing werewolf within an arbitrary chat client
description:    A game engine for playing werewolf within an arbitrary chat client.
                Werewolf is a well known social party game, commonly also called Mafia.
                See the <https://en.wikipedia.org/wiki/Mafia_(party_game) Wikipedia article> for a
                rundown on its gameplay and history.

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Game
build-type:     Simple

extra-source-files:
    CHANGELOG.md
    README.md
    variant/no-role-knowledge/description.txt
    variant/no-role-knowledge/name.txt
    variant/no-role-knowledge/command/ping/nocturnal-role-pinged.txt
    variant/no-role-knowledge/command/ping/werewolves-pinged.txt
    variant/no-role-knowledge/command/status/current-nocturnal-turn.txt
    variant/no-role-knowledge/engine/new-game/roles-in-game.txt
    variant/no-role-knowledge-or-reveal/description.txt
    variant/no-role-knowledge-or-reveal/name.txt
    variant/no-role-knowledge-or-reveal/command/choose/player-shot.txt
    variant/no-role-knowledge-or-reveal/command/ping/nocturnal-role-pinged.txt
    variant/no-role-knowledge-or-reveal/command/ping/werewolves-pinged.txt
    variant/no-role-knowledge-or-reveal/command/quit/caller-quit.txt
    variant/no-role-knowledge-or-reveal/command/status/current-nocturnal-turn.txt
    variant/no-role-knowledge-or-reveal/command/status/dead-players.txt
    variant/no-role-knowledge-or-reveal/engine/general/player-booted.txt
    variant/no-role-knowledge-or-reveal/engine/general/spiteful-villager-killed.txt
    variant/no-role-knowledge-or-reveal/engine/lynching/player-lynched.txt
    variant/no-role-knowledge-or-reveal/engine/lynching/saint-lynched.txt
    variant/no-role-knowledge-or-reveal/engine/lynching/werewolf-lynched.txt
    variant/no-role-knowledge-or-reveal/engine/new-game/roles-in-game.txt
    variant/no-role-knowledge-or-reveal/engine/sunrise/player-devoured.txt
    variant/no-role-knowledge-or-reveal/engine/sunrise/player-poisoned.txt
    variant/no-role-knowledge-or-reveal/engine/sunrise/player-turned-to-stone.txt
    variant/no-role-reveal/description.txt
    variant/no-role-reveal/name.txt
    variant/no-role-reveal/command/choose/player-shot.txt
    variant/no-role-reveal/command/ping/nocturnal-role-pinged.txt
    variant/no-role-reveal/command/ping/werewolves-pinged.txt
    variant/no-role-reveal/command/quit/caller-quit.txt
    variant/no-role-reveal/command/status/current-nocturnal-turn.txt
    variant/no-role-reveal/command/status/dead-players.txt
    variant/no-role-reveal/engine/general/player-booted.txt
    variant/no-role-reveal/engine/general/spiteful-villager-killed.txt
    variant/no-role-reveal/engine/lynching/player-lynched.txt
    variant/no-role-reveal/engine/lynching/saint-lynched.txt
    variant/no-role-reveal/engine/lynching/werewolf-lynched.txt
    variant/no-role-reveal/engine/sunrise/player-devoured.txt
    variant/no-role-reveal/engine/sunrise/player-poisoned.txt
    variant/no-role-reveal/engine/sunrise/player-turned-to-stone.txt
    variant/spiteful-village/description.txt
    variant/spiteful-village/name.txt
    variant/standard/description.txt
    variant/standard/name.txt
    variant/standard/command/boot/player-voted-boot.txt
    variant/standard/command/choose/player-shot.txt
    variant/standard/command/circle/game-circle.txt
    variant/standard/command/end/game-ended.txt
    variant/standard/command/help/druids-turn.txt
    variant/standard/command/help/game-description.txt
    variant/standard/command/help/global-commands.txt
    variant/standard/command/help/help-commands.txt
    variant/standard/command/help/hunter-commands.txt
    variant/standard/command/help/hunters-turn.txt
    variant/standard/command/help/necromancer-commands.txt
    variant/standard/command/help/necromancers-turn.txt
    variant/standard/command/help/oracle-commands.txt
    variant/standard/command/help/oracles-turn.txt
    variant/standard/command/help/orphan-commands.txt
    variant/standard/command/help/orphans-turn.txt
    variant/standard/command/help/protector-commands.txt
    variant/standard/command/help/protectors-turn.txt
    variant/standard/command/help/role.txt
    variant/standard/command/help/rules.txt
    variant/standard/command/help/scapegoat-commands.txt
    variant/standard/command/help/scapegoats-turn.txt
    variant/standard/command/help/seer-commands.txt
    variant/standard/command/help/seers-turn.txt
    variant/standard/command/help/standard-commands.txt
    variant/standard/command/help/standard-cycle.txt
    variant/standard/command/help/status-commands.txt
    variant/standard/command/help/sunrise.txt
    variant/standard/command/help/sunset.txt
    variant/standard/command/help/variant.txt
    variant/standard/command/help/village-drunks-turn.txt
    variant/standard/command/help/villages-turn.txt
    variant/standard/command/help/werewolves-turn.txt
    variant/standard/command/help/win-condition.txt
    variant/standard/command/help/witch-commands.txt
    variant/standard/command/help/witchs-turn.txt
    variant/standard/command/ping/diurnal-role-pinged.txt
    variant/standard/command/ping/nocturnal-role-pinged.txt
    variant/standard/command/ping/player-pinged.txt
    variant/standard/command/ping/village-pinged.txt
    variant/standard/command/ping/werewolves-pinged.txt
    variant/standard/command/quit/caller-quit.txt
    variant/standard/command/raise/necromancer-raised-dead.txt
    variant/standard/command/raise/player-raised-from-dead.txt
    variant/standard/command/status/alive-players.txt
    variant/standard/command/status/current-diurnal-turn.txt
    variant/standard/command/status/current-nocturnal-turn.txt
    variant/standard/command/status/dead-players.txt
    variant/standard/command/status/game-over.txt
    variant/standard/command/status/marks.txt
    variant/standard/command/unvote/player-rescinded-vote.txt
    variant/standard/command/version/engine-version.txt
    variant/standard/command/vote/player-made-devour-vote.txt
    variant/standard/command/vote/player-made-lynch-vote.txt
    variant/standard/engine/druids-turn/start.txt
    variant/standard/engine/game-over/allegiance-won.txt
    variant/standard/engine/game-over/dullahan-won.txt
    variant/standard/engine/game-over/everyone-lost.txt
    variant/standard/engine/game-over/fallen-angel-won.txt
    variant/standard/engine/game-over/necromancer-won.txt
    variant/standard/engine/game-over/player-contributed.txt
    variant/standard/engine/game-over/player-lost.txt
    variant/standard/engine/game-over/player-roles.txt
    variant/standard/engine/game-over/player-won.txt
    variant/standard/engine/general/player-booted.txt
    variant/standard/engine/general/player-killed.txt
    variant/standard/engine/general/spiteful-villager-killed.txt
    variant/standard/engine/general/zombies-returned-to-grave.txt
    variant/standard/engine/hunters-turn/start-private.txt
    variant/standard/engine/hunters-turn/start-public.txt
    variant/standard/engine/lynching/jester-lynched.txt
    variant/standard/engine/lynching/no-player-lynched.txt
    variant/standard/engine/lynching/player-lynched.txt
    variant/standard/engine/lynching/saint-lynched.txt
    variant/standard/engine/lynching/scapegoat-lynched.txt
    variant/standard/engine/lynching/werewolf-lynched.txt
    variant/standard/engine/necromancers-turn/start-private.txt
    variant/standard/engine/necromancers-turn/start-public.txt
    variant/standard/engine/new-game/beholder.txt
    variant/standard/engine/new-game/dullahan.txt
    variant/standard/engine/new-game/game-variant.txt
    variant/standard/engine/new-game/new-player.txt
    variant/standard/engine/new-game/players-in-game.txt
    variant/standard/engine/new-game/roles-in-game.txt
    variant/standard/engine/new-game/true-villager.txt
    variant/standard/engine/oracles-turn/start-private.txt
    variant/standard/engine/oracles-turn/start-public.txt
    variant/standard/engine/orphans-turn/player-joined-werewolves-group.txt
    variant/standard/engine/orphans-turn/player-joined-werewolves-private.txt
    variant/standard/engine/orphans-turn/start-private.txt
    variant/standard/engine/orphans-turn/start-public.txt
    variant/standard/engine/protectors-turn/start-private.txt
    variant/standard/engine/protectors-turn/start-public.txt
    variant/standard/engine/scapegoats-turn/end.txt
    variant/standard/engine/scapegoats-turn/start.txt
    variant/standard/engine/seers-turn/start-private.txt
    variant/standard/engine/seers-turn/start-public.txt
    variant/standard/engine/sunrise/alpha-wolf-seen.txt
    variant/standard/engine/sunrise/lycan-seen.txt
    variant/standard/engine/sunrise/no-player-devoured.txt
    variant/standard/engine/sunrise/player-devoured.txt
    variant/standard/engine/sunrise/player-divined.txt
    variant/standard/engine/sunrise/player-poisoned.txt
    variant/standard/engine/sunrise/player-seen.txt
    variant/standard/engine/sunrise/player-turned-to-stone.txt
    variant/standard/engine/sunrise/start.txt
    variant/standard/engine/sunset/start.txt
    variant/standard/engine/village-drunks-turn/player-joined-village.txt
    variant/standard/engine/village-drunks-turn/player-joined-werewolves-group.txt
    variant/standard/engine/village-drunks-turn/player-joined-werewolves-private.txt
    variant/standard/engine/village-drunks-turn/start.txt
    variant/standard/engine/villages-turn/start.txt
    variant/standard/engine/werewolves-turn/start-first-round-private.txt
    variant/standard/engine/werewolves-turn/start-private.txt
    variant/standard/engine/werewolves-turn/start-public.txt
    variant/standard/engine/witchs-turn/heal.txt
    variant/standard/engine/witchs-turn/pass.txt
    variant/standard/engine/witchs-turn/poison.txt
    variant/standard/engine/witchs-turn/start.txt
    variant/standard/error/command/boot/caller-already-voted-boot.txt
    variant/standard/error/command/choose/caller-cannot-choose-jester.txt
    variant/standard/error/command/choose/caller-cannot-choose-self.txt
    variant/standard/error/command/choose/caller-cannot-choose-zombie.txt
    variant/standard/error/command/choose/no-target.txt
    variant/standard/error/command/general/caller-cannot-do-that-right-now.txt
    variant/standard/error/command/general/caller-cannot-do-that.txt
    variant/standard/error/command/general/caller-dead.txt
    variant/standard/error/command/general/no-game-running.txt
    variant/standard/error/command/general/player-does-not-exist.txt
    variant/standard/error/command/general/target-dead.txt
    variant/standard/error/command/heal/caller-already-healed.txt
    variant/standard/error/command/poison/caller-already-poisoned.txt
    variant/standard/error/command/protect/caller-cannot-protect-same-player.txt
    variant/standard/error/command/start/game-already-running.txt
    variant/standard/error/command/start/player-count-too-low.txt
    variant/standard/error/command/start/player-names-not-unique.txt
    variant/standard/error/command/start/role-count-restricted.txt
    variant/standard/error/command/start/role-does-not-exist.txt
    variant/standard/error/command/start/variant-does-not-exist.txt
    variant/standard/error/command/unvote/caller-not-voted.txt
    variant/standard/error/command/vote/caller-already-voted.txt
    variant/standard/error/command/vote/caller-cannot-devour-werewolf.txt
    variant/standard/role/alpha-wolf/description.txt
    variant/standard/role/alpha-wolf/name.txt
    variant/standard/role/alpha-wolf/rules.txt
    variant/standard/role/beholder/description.txt
    variant/standard/role/beholder/name.txt
    variant/standard/role/beholder/rules.txt
    variant/standard/role/crooked-senator/description.txt
    variant/standard/role/crooked-senator/name.txt
    variant/standard/role/crooked-senator/rules.txt
    variant/standard/role/druid/description.txt
    variant/standard/role/druid/name.txt
    variant/standard/role/druid/rules.txt
    variant/standard/role/dullahan/description.txt
    variant/standard/role/dullahan/name.txt
    variant/standard/role/dullahan/rules.txt
    variant/standard/role/fallen-angel/description.txt
    variant/standard/role/fallen-angel/name.txt
    variant/standard/role/fallen-angel/rules.txt
    variant/standard/role/hunter/description.txt
    variant/standard/role/hunter/name.txt
    variant/standard/role/hunter/rules.txt
    variant/standard/role/jester/description.txt
    variant/standard/role/jester/name.txt
    variant/standard/role/jester/rules.txt
    variant/standard/role/lycan/description.txt
    variant/standard/role/lycan/name.txt
    variant/standard/role/lycan/rules.txt
    variant/standard/role/medusa/description.txt
    variant/standard/role/medusa/name.txt
    variant/standard/role/medusa/rules.txt
    variant/standard/role/necromancer/description.txt
    variant/standard/role/necromancer/name.txt
    variant/standard/role/necromancer/rules.txt
    variant/standard/role/oracle/description.txt
    variant/standard/role/oracle/name.txt
    variant/standard/role/oracle/rules.txt
    variant/standard/role/orphan/description.txt
    variant/standard/role/orphan/name.txt
    variant/standard/role/orphan/rules.txt
    variant/standard/role/protector/description.txt
    variant/standard/role/protector/name.txt
    variant/standard/role/protector/rules.txt
    variant/standard/role/saint/description.txt
    variant/standard/role/saint/name.txt
    variant/standard/role/saint/rules.txt
    variant/standard/role/scapegoat/description.txt
    variant/standard/role/scapegoat/name.txt
    variant/standard/role/scapegoat/rules.txt
    variant/standard/role/seer/description.txt
    variant/standard/role/seer/name.txt
    variant/standard/role/seer/rules.txt
    variant/standard/role/simple-villager/description.txt
    variant/standard/role/simple-villager/name.txt
    variant/standard/role/simple-villager/rules.txt
    variant/standard/role/simple-werewolf/description.txt
    variant/standard/role/simple-werewolf/name.txt
    variant/standard/role/simple-werewolf/rules.txt
    variant/standard/role/spiteful-villager/description.txt
    variant/standard/role/spiteful-villager/name.txt
    variant/standard/role/spiteful-villager/rules.txt
    variant/standard/role/true-villager/description.txt
    variant/standard/role/true-villager/name.txt
    variant/standard/role/true-villager/rules.txt
    variant/standard/role/village-drunk/description.txt
    variant/standard/role/village-drunk/name.txt
    variant/standard/role/village-drunk/rules.txt
    variant/standard/role/witch/description.txt
    variant/standard/role/witch/name.txt
    variant/standard/role/witch/rules.txt
    variant/standard/role/zombie/description.txt
    variant/standard/role/zombie/name.txt
    variant/standard/role/zombie/rules.txt

source-repository head
    type:       git
    location:   git@github.com:hjwylde/werewolf

executable werewolf
    main-is:        Main.hs
    hs-source-dirs: app/
    ghc-options:    -threaded -with-rtsopts=-N
    other-modules:
        Game.Werewolf.Command
        Game.Werewolf.Command.Global
        Game.Werewolf.Command.Hunter
        Game.Werewolf.Command.Necromancer
        Game.Werewolf.Command.Oracle
        Game.Werewolf.Command.Orphan
        Game.Werewolf.Command.Protector
        Game.Werewolf.Command.Scapegoat
        Game.Werewolf.Command.Seer
        Game.Werewolf.Command.Status
        Game.Werewolf.Command.Villager
        Game.Werewolf.Command.Werewolf
        Game.Werewolf.Command.Witch
        Game.Werewolf.Engine
        Game.Werewolf.Message
        Game.Werewolf.Message.Command
        Game.Werewolf.Message.Engine
        Game.Werewolf.Message.Error
        Game.Werewolf.Util
        Game.Werewolf.Variant.NoRoleKnowledge.Command
        Game.Werewolf.Variant.NoRoleKnowledge.Engine
        Game.Werewolf.Variant.NoRoleReveal.Command
        Game.Werewolf.Variant.NoRoleReveal.Engine
        Game.Werewolf.Variant.Standard.Command
        Game.Werewolf.Variant.Standard.Engine
        Game.Werewolf.Variant.Standard.Error
        Paths_werewolf
        Werewolf.Command.Boot
        Werewolf.Command.Choose
        Werewolf.Command.Circle
        Werewolf.Command.Divine
        Werewolf.Command.End
        Werewolf.Command.Heal
        Werewolf.Command.Help
        Werewolf.Command.Interpret
        Werewolf.Command.Pass
        Werewolf.Command.Ping
        Werewolf.Command.Poison
        Werewolf.Command.Protect
        Werewolf.Command.Quit
        Werewolf.Command.Raise
        Werewolf.Command.See
        Werewolf.Command.Start
        Werewolf.Command.Status
        Werewolf.Command.Unvote
        Werewolf.Command.Version
        Werewolf.Command.Vote
        Werewolf.Options
        Werewolf.System
        Werewolf.Version

    default-language: Haskell2010
    other-extensions:
        FlexibleContexts,
        MultiParamTypeClasses,
        OverloadedStrings,
        QuasiQuotes,
        Rank2Types
    build-depends:
        aeson >= 0.8 && < 0.12,
        base >= 4.8 && < 5,
        containers == 0.5.*,
        directory == 1.2.*,
        extra == 1.4.*,
        filepath == 1.4.*,
        lens >= 4.12 && < 4.15,
        MonadRandom == 0.4.*,
        mtl == 2.2.*,
        optparse-applicative >= 0.11 && < 0.14,
        random-shuffle,
        text == 1.2.*,
        transformers >= 0.4 && < 0.6,
        werewolf

library
    hs-source-dirs: src/
    exposed-modules:
        Control.Lens.Extra
        Data.String.Humanise
        Data.String.Interpolate.Extra
        Game.Werewolf
        Game.Werewolf.Game
        Game.Werewolf.Player
        Game.Werewolf.Response
        Game.Werewolf.Role
        Game.Werewolf.Variant

    default-language: Haskell2010
    other-extensions:
        CPP,
        DeriveGeneric,
        FlexibleContexts,
        OverloadedStrings,
        QuasiQuotes,
        Rank2Types,
        TemplateHaskell
    build-depends:
        aeson >= 0.8 && < 0.12,
        base >= 4.8 && < 5,
        containers == 0.5.*,
        extra == 1.4.*,
        interpolate == 0.1.*,
        lens >= 4.12 && < 4.15,
        mtl == 2.2.*,
        template-haskell >= 2.10 && < 2.12,
        text == 1.2.*,
        transformers >= 0.4 && < 0.6
